# data_processing_on_modern_hardware

./: README.md
hw1_cache_awareness/E5-2660/: sequential.csv
hw1_cache_awareness/i7-8550u/: sequential.csv
hw1_cache_awareness/src/: CycleCounter.c  PerfEvent.cc
hw2_processing_models/: CMakeLists.txt  Makefile  OperatorsVolcano.cpp  README.md
hw3_hashjoin/: Document.ipynb  Makefile  OptimizedHashJoins.hpp  TestHashJoin.cpp
hw3_hashjoin/E5-2660/: PartitionMultiPassHashJoin.csv  PartitionMultiPassHashJoinSoftwareBuffer.csv  PartitionNavieHashJoin.csv
hw3_hashjoin/I7-8550u/: PartitionMultiPassHashJoinSoftwareBuffer.csv  PartitionNavieHashJoin.csv  PartitionNavieHashJoinSoftwareBuffer.csv  TrivialHashJoin.csv  VaryingSize.csv
hw3_hashjoin/I9-7900X/: PartitionMultiPassHashJoin.csv
hw4_simd/: .gitignore  CMakeLists.txt  Makefile  TestAggregation.cpp  TestDictionaryCompression.cpp  Util.cpp  Util.hpp  aggregation.cpp  aggregation.hpp
hw5_synchronization/: .gitignore  CMakeLists.txt  Makefile  Util.cpp  Util.hpp  mix_o.csv  mix_olc.csv  read_only_o.csv
hw6_parallelization_and_numa_awareness/: .gitignore  Barrier.hpp  CMakeLists.txt  Document.ipynb  ParallelRadixJoins.cpp  ParallelRadixJoins.hpp  TestHashJoin.cpp  ThreadPool.hpp  p_hj.csv
task1_cache_awareness/: .gitignore  CMakeLists.txt  Document.ipynb  README.md
task1_cache_awareness/E5-2660/: random.csv  rev_sequential.csv
task1_cache_awareness/google_bench/: google_bm.cc  local.cmake
task1_cache_awareness/i7-8550u/: random.csv  rev_sequential.csv
task1_cache_awareness/include/: access_patterns.h  local.cmake
task1_cache_awareness/src/: access_patterns.cc  local.cmake
task1_cache_awareness/test/: dummy_test.cc  local.cmake
task2_processing_models/: .gitignore  BaseOperator.h  DBData.h  Document.ipynb  Operators.h  OperatorsColumnar.cpp  OperatorsVector.cpp  PerfEvent.hpp  WeeDB.cpp  script.sh
task3_hashjoin/: .gitignore  CMakeLists.txt  README.md  Relation.hpp  fixed_size_script.sh  non_fixed_size_script.sh  ohj.cpp
task3_hashjoin/E5-2660/: PartitionNavieHashJoinSoftwareBuffer.csv  TrivialHashJoin.csv
task3_hashjoin/I7-8550u/: PartitionMultiPassHashJoin.csv
task3_hashjoin/I9-7900X/: PartitionMultiPassHashJoinSoftwareBuffer.csv  PartitionNavieHashJoin.csv  PartitionNavieHashJoinSoftwareBuffer.csv  TrivialHashJoin.csv
task3_hashjoin/cmake/: RequireSymbol.cmake
task4_simd/: Document.ipynb  README.md  dictionaryCompression.cpp  dictionaryCompression.hpp  perfEvent.hpp
task5_synchronization/: Document.ipynb  ListBasedSetNoSync.hpp  ListBasedSetSync.hpp  README.md  TestSynchronization.cpp  Tester.cpp  read_only_olc.csv  synchronization.cpp
task6_parallelization_and_numa_awareness/: Makefile  README.md  Relation.hpp  numa_hj.csv
